@@ -88,7 +88,7 @@
             <id>run-features</id>
             <phase>integration-test</phase>
             <goals>
-              <goal>features</goal>
+              <goal>cucumber</goal>
             </goals>
           </execution>
         </executions>
