@@ -12,10 +12,14 @@ Make sure you read the release notes carefully before upgrading!
 * Added -Dcucumber.extraArgs command line parameter that allows us to add extra cucumber arguments as a string surrounded with " " and a space as the delimiter. E.g -Dcucmber.extraArgs="--color --tag @dev" (#14 Torbjørn Vatn)
 
 === Changed Features
+* The Maven "feature" goal has been renamed to "cucumber" (Aslak Hellesøy)
 * The Maven <gem> element has changed. You can now pass extra arguments, and there are no funny : delimiters. See examples. (#22 Aslak Hellesøy)
 * Groovy step definitions must use String instead of Regexp. The regexp matching happens on the Ruby side, so Regexp was misleading (Aslak Hellesøy)
 * -Dcuke4duke.objectFactory classes have changed package from cuke4duke.internal.java to cuke4duke.internal.jvmclass (Aslak Hellesøy)
 * --require **/*.java no longer supported. --require **/*.class instead (Aslak Hellesøy)
+
+=== Removed features
+* The Maven property configuration.args (<configuration><args>...) has been removed. Use configuration.cucumberArgs instead. (Aslak Hellesøy)
 
 === Bugfixes
 * diffHashes method in Table not working properly (#18 Darrin Holst)
